# job-hunter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FOUNDRY_PLAN.md  IDEA_COST.jsonl  LICENSE  PR_REVIEW.md  README.md  ROADMAP.md  SUBJECT_MATTER_UNDERSTANDING.md
.claude/agent-memory/foundry-builder-lead/: MEMORY.md  crate-dependency-rule.md  handler-gaps.md  slice-scope-authority.md
.claude/agent-memory/foundry-lifecycle-orchestrator/: MEMORY.md  project_typst-embedding-blocker.md  reference_crate-mirror.md
.foundry/: governance.md
.github/workflows/: ci.yml
apps/: README.md
apps/desktop/: .npmrc  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.test.tsx  App.tsx  AtsPanel.tsx  KeywordPanel.tsx  ReviewPanel.test.tsx  ReviewPanel.tsx  TrackerBoard.test.tsx  TrackerBoard.tsx  commands.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs  tracker_store.rs
apps/desktop/src-tauri/tests/: advocate_l4.rs  resume_import_l4.rs  story_l5.rs  system_l4.rs  templates_ats_l4.rs  templates_ats_story_l5.rs  tracker_l4.rs  tracker_store_errors_l4.rs  tracker_story_l5.rs
crates/advocate/: Cargo.toml
crates/advocate/src/: lib.rs  live.rs
crates/advocate/tests/: provider_l2.rs  redaction_boundary_l3.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: docx_output_story_l5.rs  ingestion_story_l5.rs
crates/cli/tests/fixtures/: gappy-cv.json
crates/core/: Cargo.toml
crates/core/src/: ats.rs  coverage.rs  job.rs  keyword_coverage.rs  ledger.rs  lib.rs  matching.rs  normalize.rs  render.rs  samples.rs  tailor.rs  types.rs
crates/core/tests/: boundary_schema.rs  cover_letter_one_page.rs  watermark_render.rs
crates/cvimport/: Cargo.toml
crates/cvimport/src/: error.rs  lib.rs  map.rs  mine_json.rs  segment.rs
crates/cvimport/src/extract/: docx.rs  mod.rs  pdf.rs
crates/cvimport/tests/: boundary_schema.rs  mine_json_l2.rs  mine_json_l4.rs  mine_json_story_l5.rs  module_l2.rs  perf_gate.rs  perf_gate_l1.rs  story_l5.rs
crates/cvimport/tests/fixtures/json/: dwcv_shaped.json  json_resume_shaped.json  minimal.json  multi_role_arrays.json  numeric_dates.json
crates/cvimport/tests/support/: mod.rs
crates/docx/: Cargo.toml
crates/docx/src/: lib.rs
crates/docx/tests/: module_l2.rs
crates/jobparse/: Cargo.toml
crates/jobparse/src/: lib.rs
crates/jobparse/tests/: boundary_oracle.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: callsheet.rs  crm.rs  date.rs  lib.rs  lifecycle.rs  scheduler.rs
crates/tracker/tests/: boundary_l3.rs  module_l2.rs
doc/: 001-design-brief.md  ARCHITECTURE.md  COVERAGE.md  PRIVACY.md
doc/design/: item-5-storage-decision.md  pdf-look.md
doc/idea/applicant-advocate/: brief.md  dossier.md  first-slice.md  handoff.md  smu-seed.md  spike-resume-import.md
doc/perf/: README.md
doc/schemas/: master-cv.schema.json  normalized-job.schema.json  tracker-doc.schema.json
doc/spec/: item-2-resume-import.md  item-3-advocate-llm.md  item-4-capture-extension.md  item-5-tracker-crm.ears.md  item-5-tracker-crm.md  item-6-templates-ats.ears.md  item-6-templates-ats.plan.md  item-8a-json-miner.md
extension/: README.md  manifest.json
extension/src/: background.mjs  content.mjs  popup.html  popup.mjs
extension/test/: autorun.test.mjs  content-smoke.test.mjs  manifest.test.mjs
fixtures/: manifest.json
fixtures/jobs/: job-linkedin-001.json  job-linkedin-003.json  job-linkedin-005.json  job-seek-002.json  job-seek-004.json  job-seek-006.json
fixtures/personas/: persona-001.cv.json  persona-002.cv.json  persona-003.cv.json  persona-004.cv.json
scripts/: package-cli.sh
scripts/release/: BUNDLE_README.txt  sample-job.txt
templates/cv/: classic.typ  compact.typ
templates/letter/: classic-letter.typ
tools/fake-data/: README.md  generate.js  validate-job.js  validate-tracker.js  validate.js
