[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/jobparse",
    "crates/cvimport",
    "crates/advocate",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
