[package]
name = "aa-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Applicant Advocate CLI — tailor a CV + draft a cover letter (PDF) from a master CV + a job description, fully offline and evidence-guarded."

[[bin]]
name = "applicant-advocate"
path = "src/main.rs"

[dependencies]
aa-core = { path = "../core" }
aa-cvimport = { path = "../cvimport" }
aa-jobparse = { path = "../jobparse" }
serde_json = "1"

[dev-dependencies]
# item 8b L5 STORY: drive the built binary, then assert the SAMPLE watermark text is
# extractable from the produced cv.SAMPLE.pdf (non-vacuous honesty guard).
pdf-extract = "0.10"
