[package]
name = "aa-docx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Item #10 — pure DOCX authoring for the Applicant Advocate. Consumes the SAME aa-core TailoredView / CoverLetter structs the PDF path uses and packs Word .docx bytes via docx-rs (MIT). Section headings are drawn from aa-core's ATS heading vocabulary to prevent PDF↔DOCX drift. Depends on aa-core ONLY (one-way crate graph)."

[lib]
name = "aa_docx"
path = "src/lib.rs"

[dependencies]
aa-core = { path = "../core" }
docx-rs = "0.4"

[dev-dependencies]
# Round-trip the authored .docx back through the production DOCX reader (item #2).
aa-cvimport = { path = "../cvimport" }
# Assert the packed bytes are a valid ZIP containing word/document.xml. Same version
# as the runtime cvimport dep / cvimport dev-dep elsewhere in the workspace.
zip = "2"
# Build TailoredView fixtures from persona JSON in the boundary tests.
serde_json = "1"
