[package]
name = "aa-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Applicant Advocate desktop command layer. The ONLY crate that depends on both aa-core and aa-jobparse — it wires the jobparse->core seam (R-D1) and exposes the command surface the UI and the STORY harness (R-D3) invoke."

[lib]
name = "aa_desktop"
path = "src/lib.rs"

[dependencies]
aa-core = { path = "../../../crates/core" }
aa-jobparse = { path = "../../../crates/jobparse" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
