[package]
name = "aa-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Applicant Advocate desktop command layer. The ONLY crate that depends on both aa-core and aa-jobparse — it wires the jobparse->core seam (R-D1) and exposes the command surface the UI and the STORY harness (R-D3) invoke."

[lib]
name = "aa_desktop"
path = "src/lib.rs"

[dependencies]
aa-core = { path = "../../../crates/core" }
aa-jobparse = { path = "../../../crates/jobparse" }
aa-cvimport = { path = "../../../crates/cvimport" }
# DEFAULT features only — so the workspace CI gate compiles the advocate trait + stub,
# NOT the `live-http` network adapters. No network code in CI by construction (R-ADV-2).
aa-advocate = { path = "../../../crates/advocate" }
# Item #5: the application tracker / CRM cores (pure, clock-injected). The TrackerStore
# seam + JsonFileStore persistence + the new Session commands live HERE (the command
# layer), keeping aa-tracker IO-free. Default features only (no network).
aa-tracker = { path = "../../../crates/tracker" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Synthesises DOCX résumé fixtures from personas at test time (I4: no committed
# binary fixtures) for the L4 résumé-import system test. NOT on the shipped path.
docx-rs = "0.4"
